@@ -2013,15 +2013,14 @@ class VariablesChecker(BaseChecker):
             return module
         return None
 
-    def _check_all(self, node, not_consumed):
+    def _check_all(self, node: nodes.Module, not_consumed):
         assigned = next(node.igetattr("__all__"))
         if assigned is astroid.Uninferable:
             return
-
-        if not isinstance(assigned, (nodes.Tuple, nodes.List, list, tuple)):
-            self.add_message("invalid-all-format", node=assigned)
+        if not assigned.pytype() in ["builtins.list", "builtins.tuple"]:
+            line, col = assigned.tolineno, assigned.col_offset
+            self.add_message("invalid-all-format", line=line, col_offset=col, node=node)
             return
-
         for elt in getattr(assigned, "elts", ()):
             try:
                 elt_name = next(elt.infer())
