@@ -1,0 +1,7 @@
+"""Test valid __all__ format."""
+
+# pylint: disable=import-error, unused-import
+
+from foo import bar
+
+__all__ = list(globals().keys())
